Bug 160695 - NVDA does not report formatting toggles (bold, italic, underline, etc.)
Summary: NVDA does not report formatting toggles (bold, italic, underline, etc.)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All Windows (All)
: medium normal
Assignee: Michael Weghorn
URL:
Whiteboard: target:24.8.0
Keywords: accessibility
Depends on:
Blocks: a11y-Windows
  Show dependency treegraph
 
Reported: 2024-04-16 15:42 UTC by Michael Weghorn
Modified: 2024-04-17 13:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2024-04-16 15:42:14 UTC
Steps to reproduce:

1) Start NVDA screen reader
2) start LO Writer on Windows with English UI
3) type "hello world"
4) select text
5) press Ctrl+B to toggle text to bold

Actual result:

The text is toggled to bold, as the "Bold" button in Writer's Formatting toolbar indicates.
However, NVDA does not announce this, doesn't say e.g. "Bold" on (as it does for MS Word).

Further information:

This was originally reported/requested in NVDA's issue tracker:
https://github.com/nvaccess/nvda/issues/4248

Similar ticket for Orca screen reader on Linux: tdf#123864

NVDA: self-compiled from git master (as of 20342a38425eb0daf1a8868e9162bcbe0515d555)

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 44ff9907eb1f2851b3b9087e7ec5e5dfae5a00c6
CPU threads: 12; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DE); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2024-04-16 15:43:28 UTC
Self-confirming as originally reported by somebody else, see https://github.com/nvaccess/nvda/issues/4248

I'm working on an implementation in both LO and NVDA to make this work.
Comment 2 Commit Notification 2024-04-17 06:07:25 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0425b6eb47830b1fe630dc0128d5049f4b3e5582

tdf#160695 wina11y: Send status change events for toolbar buttons

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2024-04-17 13:19:09 UTC
Pending pull request for the NVDA-side implementation:
https://github.com/nvaccess/nvda/issues/4248

With the commit from comment 2 and that NVDA PR, announcement works for me when toggling bold, italic,... using the corresponding keyboard shortcuts.

-> closing as FIXED, as the LO side is done unless anything else shows up during the review of above-mentioned NVDA PR.

Note that this currently only works with the default user interface, not the Tabbed one, as that one has its own a11y issues and that the announcement relies on toolbar button state changes, i.e. when not showing the Formatting toolbar or removing the relevant buttons from it, announcement wont't be triggered either, s. discussion in the NVDA PR for more details.